mdcfg (0.17) UNRELEASED; urgency=low

  * Christian Perrier
    - Improve the templates.

 -- Martin Michlmayr <tbm@cyrius.com>  Wed, 05 May 2004 00:06:14 +0100

mdcfg (0.16) UNRELEASED; urgency=low

  * It should now *really* be possible to create more than two RAID device :-)

 -- Paul Fleischer <proguy@proguy.dk>  Sat, 22 Jan 2004 23:00:19 +0200

mdcfg (0.15) UNRELEASED; urgency=low

  * It should now be possible to create more than two RAID device
  * Fix a typo in the Depends line (Martin Michlmayr).

 -- Paul Fleischer <proguy@proguy.dk>  Sat, 21 Jan 2004 02:47:23 +0200

mdcfg (0.14) UNRELEASED; urgency=low

  * mdcfg-utils is now generated for use with partman-md

 -- Paul Fleischer <proguy@proguy.dk>  Sat, 20 Jan 2004 21:51:50 +0200

mdcfg (0.13) UNRELEASED; urgency=low

  * db_capb and db_stop no more called, hopefully this fixed some 
    issues with partman-md

 -- Paul Fleischer <proguy@proguy.dk>  Sat, 20 Jan 2004 21:13:41 +0200

mdcfg (0.12) UNRELEASED; urgency=low

  * Deleting md devices should now work properly

 -- Paul Fleischer <proguy@proguy.dk>  Sat, 10 Jan 2004 21:29:09 +0200

mdcfg (0.11) UNRELEASED; urgency=low

  * The script is now also installed as /bin/mdcfg

 -- Paul Fleischer <proguy@proguy.dk>  Sat, 10 Jan 2004 20:01:55 +0200

mdcfg (0.10) UNRELEASED; urgency=low

  * mdadm should now be displayed *after* lvmcfg

 -- Paul Fleischer <proguy@proguy.dk>  Fri, 29 Jan 2004 21:57:00 +0200

mdcfg (0.09) UNRELEASED; urgency=low

  * mdadm is installed via apt-install in the beginning of the script

 -- Paul Fleischer <proguy@proguy.dk>  Fri, 27 Jan 2004 22:56:00 +0200

mdcfg (0.07) UNRELEASED; urgency=low

  * mdadm should now *really* be installed.
  * The --force option should be placed properly when creating arrays.

 -- Paul Fleischer <proguy@proguy.dk>  Fri, 27 Jan 2004 22:56:00 +0200

mdcfg (0.06) UNRELEASED; urgency=low

  * Request mdadm to be installed no matter what.
