@@ -26,6 +26,14 @@ _Description: No RAID partitions available
  If you have such partitions, they might contain actual filesystems, and are
  therefore not available for use by this configuration utility.
 
+Template: mdcfg/notenoughparts
+Type: error
+_Description: Not enough RAID partitions available
+ There are not enough RAID partitions available for your selected
+ configuration.  You have ${NUM_PART} RAID partitions available but
+ your configuration requires ${REQUIRED} partitions (${DEV} active
+ and ${SPARE} spare devices).
+
 Template: mdcfg/createmain
 Type: select
 Choices: RAID1, Cancel
