@@ -2,6 +2,9 @@ mdcfg (0.17) UNRELEASED; urgency=low
 
   * Christian Perrier
     - Improve the templates.
+  * Martin Michlmayr
+    - Complain in advance if not enough partitions are available for
+      active + spare.
 
  -- Martin Michlmayr <tbm@cyrius.com>  Wed, 05 May 2004 00:06:14 +0100
 
